--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --progress --colors",
-    "dev": "webpack-dev-server --progress --profile --colors --hot --host 0.0.0.0 --port 8000 --content-base public/ --inline"
+    "dev": "webpack-dev-server --progress --profile --colors --content-base public/"
   },
   "keywords": [
     "webpack", "vagrant", "react", "reflux", "flask"
