--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "EightOhEight",
+  "name": "Todo",
   "version": "0.0.1",
-  "description": "A music site",
+  "description": "Todo App with React and Redux",
   "main": "index.js",
   "scripts": {
     "build": "webpack --progress --colors",
     "dev": "webpack-dev-server --progress --profile --colors --content-base public/"
   },
   "keywords": [
-    "webpack", "vagrant", "react", "reflux", "flask"
+    "webpack",
+    "vagrant",
+    "react",
+    "redux"
   ],
   "author": "Christo Georgiev",
   "license": "None",
   "devDependencies": {
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
+    "redux-devtools": "^2.1.5",
     "webpack": "~1.12.2",
     "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
-    "react-dom": "~0.14.2",
-    "react": "~0.14.2",
-    "babelify": "~7.2.0",
-    "babel-preset-react": "~6.1.2",
-    "react-router": "~1.0.0-rc4",
+    "express": "^4.13.3",
     "history": "~1.13.0",
+    "react": "~0.14.2",
+    "react-dom": "~0.14.2",
+    "react-redux": "^4.0.0",
+    "react-router": "~1.0.0-rc4",
+    "redux": "^3.0.4",
     "reflux": "~0.3.0",
     "superagent": "~1.4.0"
   }
